2007-12-14  Mathias Hasselmann  <mathias@openismus.com>

	Correct "Since:" tags for GtkPageSetup and GtkPrintSettings as
	next stable release shall be 2.16, not 2.14 - even if disagree.

	* gtk/gtkpagesetup.c, gtk/gtkprintsettings.c: s/2.14/2.16/

2007-12-14  Mathias Hasselmann  <mathias@openismus.com>

	Change GtkToolItem to retrieve its properties from GtkToolShell
	interface, instead of relying on being child of a GtkToolbar.
	(#5034079)

	* gtk/gtk.symbols, docs/reference/gtk/gtk-docs.sgml,
	docs/reference/gtk/gtk-sections.txt: Add GtkToolShell symbols.
	* docs/reference/gtk/tmpl/gtktoolitem.sgml: Move section docs inline.
	* gtk/gtktoolbar.c: Implement GtkToolShellIface.
	* gtk/gtktoolbar.h: Remove _gtk_toolbar_rebuild_menu.
	* gtk/gtktoolitem.c: Use GtkToolShell, instead of GtkToolbar.
	Take section docs from template file and update them for GtkToolShell.
	* gtk/Makefile.am: Add gtk/gtktoolshell.c and gtk/gtktoolshell.h.
	* gtk/gtktoolshell.c, gtk/gtktoolshell.h: New GtkToolShellIface.

2007-12-14  Mathias Hasselmann  <mathias@openismus.com>

	Extract loading of GtkPageSetup and GtkPrintSettings from their
	*_new_*() functions and move that code into separate
	*_load_*() functions (#475565).

	* gtk/gtk.symbols, gtk/gtkpagesetup.c, gtk/gtkpagesetup.h:
	Extract gtk_page_setup_load_file, gtk_page_setup_load_key_file,
	gtk_print_settings_load_file and gtk_print_settings_load_key_file.
	Change the matching *_new_*() functions to use those functions.

2007-12-14  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols:
	* gtk/gtktooltip.[hc]: Add gtk_tooltip_set_icon_from_icon_name().

2007-12-14  Kristian Rietveld  <kris@imendio.com>

	* gtk/tests/liststore.c:
	* gtk/tests/treestore.c: added tests for insertion functions.

Thu Dec 13 13:14:50 2007  Søren Sandmann  <sandmann@redhat.com>

	* Add RandR 1.2 support

	- New monitors_changed signal - New API to get width/height of
	  monitors, and the name of the plug
